# Geodesic_Raytracer

./: .gitignore  CMakeLists.txt  README.md  main.cu
native/: tracer.cu  tracer.h
source/: CMakeLists.txt  quaternion.cu  quaternion.h  tracer.cu  tracer.h
source/geometry/: CMakeLists.txt  metric.cu  metric.h
